[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://screens/HUD.gd" type="Script" id=2]
[ext_resource path="res://images/ui/pause.png" type="Texture" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.5
margin_right = 75.5
margin_bottom = 73.0
text = "0"
align = 1

[node name="BestScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 78.0
theme_type_variation = "SmallLabel"
text = "BEST_N"
align = 2

[node name="PauseButton" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 60.0
hint_tooltip = "PAUSE"
icon = ExtResource( 3 )

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
